# bazel_pex_cross_demo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  example.py  pr618.patch  pyproject.toml
